fix alignment

--- a/app/assets/stylesheets/shared/reports/training_requirements/h_graph.sass
+++ b/app/assets/stylesheets/shared/reports/training_requirements/h_graph.sass
@@ -96,7 +96,7 @@
 
   .units
     bottom: 100px
-    left: -120px
+    left: -100px
     height: 135px
     width: 18px
     background: image-url('report/h-graph-y-unit.png') no-repeat center center
